--- a/.github/workflows/update_fork_star.yml
+++ b/.github/workflows/update_fork_star.yml
@@ -20,4 +20,4 @@ jobs:
         uses: ouuan/This-repo-has-x-stars-y-forks-action@v2
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
-          template: "sun0225SUN's readme profile with <starCount> stars and <forkCount> forks 🎉"
+          template: "YaoYao1995's readme profile with <starCount> stars and <forkCount> forks 🎉"
